--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -10,6 +10,18 @@ body {
 .pages {
   color: #316685;
   text-align: center;
-  font-size: 3.5rem;
-  margin-top: 10%;
+  /* margin-top: 10%; */
+}
+.drop{
+  position: relative;
+  top: 0%;
+  height: 10;
+}
+.dr{
+  position: relative;
+  top: 1px;
+  font-size: 20px;
+  background-color: green;
+  color:yellow;
+  text-align: center;
 }
