--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -4,12 +4,10 @@
 }
 
 body {
-  background-color: #b5fac7;
+  background-color: #BDEDE0;
 }
 
 .pages {
-  color: #316685;
-  text-align: center;
-  font-size: 3.5rem;
-  margin-top: 10%;
+  color: #7E78D2;
+
 }
