--- a/Client/src/components/NavBar.css
+++ b/Client/src/components/NavBar.css
@@ -1,5 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .navbar {
-  background-color: #1f5156;
+  background-color: #7E78D2;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -20,7 +25,7 @@
 }
 
 .nav-logo {
-  color: #f5b921;
+  color: #BBDBD1;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
@@ -63,12 +68,12 @@
 
 .nav-item:hover:after {
   width: 100%;
-  background: #ffdd40;
+  background: #BBDBD1;
 }
 
 .nav-item .active {
-  color: #ffdd40;
-  border: 1px solid #ffdd40;
+  color: #BBDBD1;
+  border: 1px solid #BBDBD1;
 }
 
 .nav-icon {
@@ -89,14 +94,14 @@
   }
 
   .nav-menu.active {
-    background: #1f5156;
+    background: #7E78D2;
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
   }
   .nav-item .active {
-    color: #ffdd40;
+    color: #BBDBD1;
     border: none;
   }
   .nav-links {
@@ -113,6 +118,6 @@
     transform: translate(-100%, 60%);
     font-size: 1.8rem;
     cursor: pointer;
-    color: #ffdd40;
+    color: #BBDBD1;
   }
 }
