--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -1,6 +1,9 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+*{
     margin: 0;
     padding: 0;
+    font-family: 'Lato', sans-serif;
+    box-sizing: border-box;
   }
   
   body {
@@ -8,6 +11,28 @@
   }
   
   .pages {
-    color: #316685;
+    color: #7E78D2;
   }
+.sidebar {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
+.drop{
+  display:flex ;
+  align-items: center;
+  justify-content: center;
+  height: 60px;
+  text-align: center;
   
+}
+.dr{
+  text-align: center;
+  height: 30px;
+  width: 170px;
+  display: inline-block;
+  background-color: lavenderblush;
+  border:1px solid black;
+}
