--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -13,6 +13,28 @@
   .pages {
     color: #7E78D2;
   }
+ 
+.sidebar {
+  display: flex;
+  height: 90vh;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+}
 
-  
-  
+  .drop{
+    display:flex ;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    text-align: center;
+    
+  }
+  .dr{
+    text-align: center;
+    height: 30px;
+    width: 170px;
+    display: inline-block;
+    background-color: lavenderblush;
+    border:1px solid black;
+  }
