--- a/Client/src/Pages/add.css
+++ b/Client/src/Pages/add.css
@@ -6,29 +6,25 @@
     'Lucida Sans', Arial, sans-serif;
 }
 
-/* body {
-  background: linear-gradient(
-    90deg,
-    rgba(48, 16, 255, 1) 0%,
-    rgba(100, 115, 255, 1) 100%
-  );
-} */
 .todo-app {
   display: flex;
   flex-direction: column;
   justify-content: start;
   width: 520px;
   min-height: 600px;
-  background: #161a2b;
+  background: white;
   text-align: center;
   margin: 128px auto;
   border-radius: 10px;
   padding-bottom: 32px;
+  margin-top: 0;
+  padding: 20px;
+  box-shadow: rgba(236, 190, 190, 0.25) 0px 25px 50px -12px;
 }
 
 h1 {
   margin: 32px 0;
-  color: #fff;
+  color: #7E78D2;
   font-size: 24px;
 }
 
@@ -47,12 +43,13 @@ h1 {
   border: 2px solid #5d0cff;
   outline: none;
   width: 320px;
-  background: transparent;
-  color: #fff;
+  background: white;
+  
+  
 }
 
 .todo-input::placeholder {
-  color: #e2e2e2;
+  color: black;
 }
 
 .todo-button {
