--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -7,11 +7,11 @@
   }
   
   body {
-    background-color: #BDEDE0;
+    background-color: #C1FFF2;
   }
   
   .pages {
-    color: #7E78D2;
+    color: #1e1b18;
   }
  
 .sidebar {
