--- a/Client/src/Pages/Register.css
+++ b/Client/src/Pages/Register.css
@@ -5,7 +5,8 @@
 
 .container{
     padding-top: 20px;
-    background: linear-gradient(135deg,#C1FFF2,#BBDBD1);
+    background: linear-gradient(135deg,#C1FFF2,#BDEDE0
+    );
     width:100%;
     min-height: 100vh;
     display:flex;
@@ -23,7 +24,7 @@
     border-radius: 10px;
 }
 .title{
-    color:#7E78D2;
+    color:#96939B;
     text-align: center;
     margin:8-px 0px 40px 0px;
 
@@ -33,11 +34,11 @@
 .password,
 .num{
     margin: 20px;
-    color:#969292
+    color:#96939B;
 }
 .gender{
     margin: 20px;
-    color:#969292
+    color:#96939B;
 }
 .radi{
     margin-left: 30px;
@@ -68,7 +69,7 @@
     border-radius:25px;
     color:white;
     padding: 10px 60px;
-    background:linear-gradient(to right,#ab1dcf,#BBDBD1);
+    background:linear-gradient(to right,lightgreen,#BBDBD1);
     box-shadow: rgba(0,0,0,0.3) 0px 19px 38px, rgba(0,0,0,0.22) 0px 15px 12px;
     margin:auto;
     outline:none;
