--- a/Client/src/components/NavBar.css
+++ b/Client/src/components/NavBar.css
@@ -4,7 +4,7 @@
 }
 
 .navbar {
-  background-color: #7E78D2;
+  background-color: #1e1b18;
   height: 80px;
   display: flex;
   justify-content: center;
@@ -25,7 +25,7 @@
 }
 
 .nav-logo {
-  color: #BBDBD1;
+  color: white;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
@@ -42,7 +42,7 @@
 }
 
 .nav-links {
-  color: #fff;
+  color: white;
   text-decoration: none;
   padding: 0.5rem 1rem;
   height: 100%;
@@ -68,12 +68,12 @@
 
 .nav-item:hover:after {
   width: 100%;
-  background: #BBDBD1;
+  background: lightgreen;
 }
 
 .nav-item .active {
-  color: #BBDBD1;
-  border: 1px solid #BBDBD1;
+  color: DBDBDB;
+  border: 1px solid  lightgreen;
 }
 
 .nav-icon {
@@ -94,14 +94,14 @@
   }
 
   .nav-menu.active {
-    background: #7E78D2;
+    background: #96939B;
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
   }
   .nav-item .active {
-    color: #BBDBD1;
+    color: #DBDBDB;
     border: none;
   }
   .nav-links {
@@ -118,6 +118,6 @@
     transform: translate(-100%, 60%);
     font-size: 1.8rem;
     cursor: pointer;
-    color: #BBDBD1;
+    color: #DBDBDB;
   }
 }
