--- a/Client/src/Pages/Register.css
+++ b/Client/src/Pages/Register.css
@@ -18,7 +18,7 @@
 .app-wrapper{
     background-color: #fff;
     min-width: 350px;
-    min-height: 650px;
+    height: auto;
     padding: 30px;
     box-sizing: border-box;
     border-radius: 10px;
