--- a/Client/src/styles/About.css
+++ b/Client/src/styles/About.css
@@ -7,11 +7,12 @@
 
 .aboutTop {
   width: 100%;
-  height: 45%;
+  height: 100%;
+  margin-top: 50px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  /* background-size: cover; */
+  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
 .aboutBottom {
