--- a/Server/dev-data/templates/tourCardTemplate.pug
+++ b/Server/dev-data/templates/tourCardTemplate.pug
@@ -2,12 +2,12 @@
   .card__header
     .card__picture
       .card__picture-overlay &nbsp;
-      img.card__picture-img(src='img/tour-1-cover.jpg', alt='Tour 1')
+      img.card__picture-img(src='img/donarfood-1-cover.jpg', alt='donarfood 1')
     h3.heading-tertirary
       span The Forest Hiker
 
   .card__details
-    h4.card__sub-heading Easy 5-day tour
+    h4.card__sub-heading Easy 5-day donarfood
     p.card__text Breathtaking hike through the Canadian Banff National Park
     .card__data
       svg.card__icon
