--- a/Server/dev-data/templates/tourTemplate.pug
+++ b/Server/dev-data/templates/tourTemplate.pug
@@ -1,11 +1,11 @@
 section.section-header
   .header__hero
     .header__hero-overlay &nbsp;
-    img.header__hero-img(src='/img/tour-5-cover.jpg', alt='Tour 5')
+    img.header__hero-img(src='/img/donarfood-5-cover.jpg', alt='donarfood 5')
 
   .heading-box
     h1.heading-primary
-      span The Park Camper Tour
+      span The Park Camper donarfood
     .heading-box__group
       .heading-box__detail
         svg.heading-box__icon
@@ -43,14 +43,14 @@ section.section-description
           span.overview-box__text 4.9 / 5
 
       .overview-box__group
-        h2.heading-secondary.ma-bt-lg Your tour guides
+        h2.heading-secondary.ma-bt-lg Your donarfood guides
         .overview-box__detail
           img.overview-box__img(src='/img/users/user-19.jpg', alt='Lead guide')
           span.overview-box__label Lead guide
           span.overview-box__text Steven Miller
         .overview-box__detail
-          img.overview-box__img(src='/img/users/user-18.jpg', alt='Tour guide')
-          span.overview-box__label Tour guide
+          img.overview-box__img(src='/img/users/user-18.jpg', alt='donarfood guide')
+          span.overview-box__label donarfood guide
           span.overview-box__text Lisa Brown
         .overview-box__detail
           img.overview-box__img(src='/img/users/user-17.jpg', alt='Intern')
@@ -58,17 +58,17 @@ section.section-description
           span.overview-box__text Max Smith
 
   .description-box
-    h2.heading-secondary.ma-bt-lg About the park camper tour
+    h2.heading-secondary.ma-bt-lg About the park camper donarfood
     p.description__text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     p.description__text Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum!
 
 section.section-pictures
   .picture-box
-    img.picture-box__img.picture-box__img--1(src='/img/tour-5-1.jpg', alt='The Park Camper Tour 1')
+    img.picture-box__img.picture-box__img--1(src='/img/donarfood-5-1.jpg', alt='The Park Camper donarfood 1')
   .picture-box
-    img.picture-box__img.picture-box__img--2(src='/img/tour-5-2.jpg', alt='The Park Camper Tour 1')
+    img.picture-box__img.picture-box__img--2(src='/img/donarfood-5-2.jpg', alt='The Park Camper donarfood 1')
   .picture-box
-    img.picture-box__img.picture-box__img--3(src='/img/tour-5-3.jpg', alt='The Park Camper Tour 1')
+    img.picture-box__img.picture-box__img--3(src='/img/donarfood-5-3.jpg', alt='The Park Camper donarfood 1')
 
 section.section-map
   #map
@@ -96,10 +96,10 @@ section.section-reviews
 section.section-cta
   .cta
     .cta__img.cta__img--logo
-      img(src='/img/logo-white.png', alt='Natours logo')
-    img.cta__img.cta__img--1(src='/img/tour-5-2.jpg', alt='')
-    img.cta__img.cta__img--2(src='/img/tour-5-1.jpg', alt='')
+      img(src='/img/logo-white.png', alt='Nadonarfoods logo')
+    img.cta__img.cta__img--1(src='/img/donarfood-5-2.jpg', alt='')
+    img.cta__img.cta__img--2(src='/img/donarfood-5-1.jpg', alt='')
     .cta__content
       h2.heading-secondary What are you waiting for?
       p.cta__text 10 days. 1 adventure. Infinite memories. Make it yours today!
-      button.btn.btn--green.span-all-rows Book tour now!
+      button.btn.btn--green.span-all-rows Book donarfood now!
