--- a/Client/src/Pages/add.css
+++ b/Client/src/Pages/add.css
@@ -9,7 +9,7 @@
 .todo-app {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   width: 520px;
   min-height: 600px;
   background: white;
