--- a/Server/dev-data/templates/userSettingsTemplate.pug
+++ b/Server/dev-data/templates/userSettingsTemplate.pug
@@ -29,7 +29,7 @@ main.main
             a(href='#')
               svg
                 use(xlink:href='img/icons.svg#icon-map')
-              | Manage tours
+              | Manage donarfoods
           li
             a(href='#')
               svg
@@ -54,7 +54,7 @@ main.main
             input#name.form__input(type='text', value='Jonas Schmedtmann', required)
           .form__group.ma-bt-md
             label.form__label(for='email') Email address
-            input#email.form__input(type='email', value='admin@natours.io', required)
+            input#email.form__input(type='email', value='admin@nadonarfoods.io', required)
           .form__group.form__photo-upload
             img.form__user-photo(src='img/user.jpg', alt='User photo')
             a.btn-text(href='') Choose new photo
