--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -15,11 +15,11 @@
   }
  
 .sidebar {
-  display: flex;
-  height: 90vh;
+  /* display: flex; */
+  /* height: 90vh; */
   align-items: center;
   justify-content: center;
-  font-size: 3rem;
+  /* font-size: 3rem; */
 }
 
   .drop{
